# suggestions

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build-binaries.yml  continuous-integration.yml  hugo.yml  pandoc.yml
docs/: config-ex.toml  hugo.toml  index.html  index.md  simple.css
docs/content/: _index.md  homepage.md
docs/public/: 404.html  en.search.min.b919a42f4368cbacf1362a7379f0459655593a20384d7b1af0b982a0796849d3.js  index.html  index.xml  manifest.json  sitemap.xml
docs/public/categories/: index.html  index.xml
docs/public/page/1/: index.html
docs/public/tags/: index.html  index.xml
resources/: new.txt  old.txt  suggestions-bad-nested-comment.txt  suggestions-bad-unmatched-closer.txt  suggestions-bad-unmatched-opener.txt  suggestions-multiline.txt  suggestions-nested.txt  suggestions-simple.txt  suggestions-tex.tex  suggestions.txt
src/: changetxt.rs  lib.rs  main.rs  node.rs
tests/: test-cli.rs
tests/snapshots/: test_cli__colorize.snap  test_cli__diff-2.snap  test_cli__diff.snap  test_cli__multiline-2.snap  test_cli__multiline.snap  test_cli__nested-2.snap  test_cli__nested.snap  test_cli__simple-2.snap  test_cli__simple.snap  test_cli__tex.snap
