[package]
name = "changetxt"
version = "0.1.0"
edition = "2021"
authors = ["David Hugh-Jones <davidhughjones@gmail.com>"]
description = "A simple, human-readable diff and comment format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
similar = "2"
